<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        app:elevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingTop="24dp">

            <TextView
                android:id="@+id/tvCollectorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold"
                tools:text="Camilo\nColeccionista" />

            <TextView
                android:id="@+id/tvCollectorEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="camilo.coleccionista@neon-nocturne.com" />

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="52dp"
                android:paddingVertical="12dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/search_background"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="12dp"
                android:hint="@string/search_album"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingHorizontal="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/silver_chalice" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="12dp"
                android:background="@color/background"
                app:tabIndicatorColor="@color/white"
                app:tabIndicatorHeight="3dp"
                app:tabSelectedTextColor="@color/white"
                app:tabTextColor="@color/white">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite_albums" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite_artists" />
            </com.google.android.material.tabs.TabLayout>

        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCollectorDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:padding="16dp"
            tools:listitem="@layout/item_album" />

        <LinearLayout
            android:id="@+id/llEmptyState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:alpha="0.5"
                android:contentDescription="@null"
                android:src="@drawable/ic_search"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/tvEmptyState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="No se encontraron álbumes" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llErrorState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:alpha="0.5"
                android:contentDescription="@null"
                android:src="@drawable/ic_sad_face"
                app:tint="@color/silver_chalice" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/error_loading_content"
                android:textAlignment="center"
                android:textColor="@color/silver_chalice"
                android:textSize="16sp" />
        </LinearLayout>

    </FrameLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
