...
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            tools:ignore="DuplicateIncludedIds" />
    </LinearLayout>

    <include
        android:id="@+id/include_collectors"
        layout="@layout/item_menu_card" />

</LinearLayout>
